# dimg

./: AUTHORS  CMakeLists.txt  NEWS  PACKAGING  README.md  bootstrap.tarball
core/dplugins/dimg/: CMakeLists.txt
core/dplugins/dimg/heif/: dimgheifplugin.cpp
core/dplugins/dimg/imagemagick/: dimgimagemagickplugin.cpp
core/dplugins/dimg/jpeg/: dimgjpegloader_load.cpp  dimgjpegplugin.cpp
core/dplugins/dimg/jpeg2000/: dimgjpeg2000loader_load.cpp  dimgjpeg2000plugin.cpp
core/dplugins/dimg/pgf/: dimgpgfloader.cpp  dimgpgfloader.h  dimgpgfplugin.cpp
core/dplugins/dimg/png/: dimgpngplugin.cpp
core/dplugins/dimg/qimage/: dimgqimageplugin.cpp
core/dplugins/dimg/raw/: dimgrawplugin.cpp
core/dplugins/dimg/tiff/: dimgtiffplugin.cpp
core/dplugins/generic/tools/: CMakeLists.txt
core/libs/: CMakeLists.txt
core/libs/album/manager/: albummanager.cpp  albummanager.h  albummanager_album.cpp  albummanager_collection.cpp  albummanager_dalbum.cpp  albummanager_database.cpp  albummanager_falbum.cpp  albummanager_palbum.cpp  albummanager_talbum.cpp
core/libs/album/treeview/: abstractalbumtreeview.cpp  abstractalbumtreeview.h  abstractalbumtreeview_p.h  albumselectiontreeview.cpp
core/libs/database/collection/: collectionmanager_location.cpp  collectionscanner.h  collectionscanner_p.cpp  collectionscanner_p.h  collectionscanner_scan.cpp  collectionscanner_utils.cpp  collectionscannerhints.cpp
core/libs/database/coredb/: coredb.cpp  coredb.h  coredbcopymanager.cpp  coredbfields.h  coredbschemaupdater.cpp
core/libs/database/dbjobs/: dbjobsthread.cpp
core/libs/database/haar/: haariface.cpp  haariface.h  haariface_p.cpp
core/libs/database/history/: itemhistorygraph_boost.h  itemhistorygraphmodel.cpp
core/libs/database/models/: itemmodel.cpp  itemmodel.h
core/libs/database/server/: databaseserver.cpp  databaseserver.h
core/libs/database/tags/: facetags.cpp  facetagseditor.cpp  tagscache.cpp  tagscache.h
core/libs/dialogs/: dconfigdlgmngr.cpp  dconfigdlgmngr.h  dsplashscreen.cpp  libsinfodlg.cpp
core/libs/dimg/: CMakeLists.txt  dimg_scale.cpp
core/libs/dngwriter/: dngwriter_convert.cpp
core/libs/dplugins/widgets/: ditemslist.cpp
core/libs/dragdrop/: dragdropimplementations.cpp
core/libs/fileactionmanager/: databaseworkeriface.cpp  databaseworkeriface.h  fileactionmngr.cpp  fileactionmngr_p.cpp  metadatahub.cpp  metadatahub.h
core/libs/kmemoryinfo/libstatgrab/: kmemoryinfo_backend.cpp
core/libs/metadataengine/: CMakeLists.txt
core/libs/metadataengine/dmetadata/: dmetadata.h  dmetadata_comments.cpp  dmetadata_faces.cpp  dmetadata_fileio.cpp  dmetadata_tags.cpp  dmetadata_video.cpp  dmetadatasettingscontainer.cpp  dmetadatasettingscontainer.h
core/libs/metadataengine/engine/: metaengine_exif.cpp  metaenginesettingscontainer.cpp  metaenginesettingscontainer.h
core/libs/metadataengine/exiftool/: exiftoolparser.cpp  exiftoolparser.h  exiftoolparser_command.cpp  exiftoolparser_output.cpp  exiftoolparser_p.cpp  exiftoolparser_p.h  exiftoolprocess.cpp  exiftoolprocess.h  exiftoolprocess_p.cpp  exiftoolprocess_p.h
core/libs/metadataengine/focuspoint/: README  focuspoint.cpp  focuspoint.h  focuspoints_extractor.cpp  focuspoints_extractor.h  focuspoints_extractor_canon.cpp  focuspoints_extractor_default.cpp  focuspoints_extractor_nikon.cpp  focuspoints_extractor_panasonic.cpp  focuspoints_extractor_sony.cpp  focuspoints_writer.h  (+1 more)
core/libs/models/: abstractalbummodel.cpp
core/libs/onlineversion/: onlineversionchecker.cpp  onlineversiondwnl.cpp
core/libs/pgfutils/: pgfutils.cpp  pgfutils.h
core/libs/properties/: CMakeLists.txt  itempropertiesmetadatatab.cpp  itempropertiesmetadatatab.h  itempropertiessidebar.cpp
core/libs/template/: templatepanel.cpp  templateviewer.cpp
core/libs/transitionmngr/: effectpreview.cpp  frameutils.cpp  transitionmngr_p.h  transitionpreview.cpp
core/libs/video/: CMakeLists.txt
core/showfoto/: CMakeLists.txt
core/showfoto/folderview/: showfotofolderviewbar.cpp  showfotofolderviewbar.h  showfotofolderviewiconprovider.cpp  showfotofolderviewiconprovider.h  showfotofolderviewlist.cpp  showfotofolderviewlist.h  showfotofolderviewmodel.cpp  showfotofolderviewmodel.h  showfotofolderviewsidebar.cpp  showfotofolderviewsidebar.h  showfotofolderviewtooltip.cpp  showfotofolderviewtooltip.h  showfotofolderviewundo.cpp  showfotofolderviewundo.h
core/showfoto/main/: main.cpp  org.kde.showfoto.appdata.xml  showfoto.cpp  showfoto.h  showfoto_config.cpp  showfoto_p.h  showfoto_setup.cpp
core/showfoto/thumbbar/: showfotoimagemodel.cpp  showfotoimagemodel.h
core/tests/: CMakeLists.txt
core/tests/advancedrename/: advancedrename_utest.cpp  advancedrename_utest.h
core/tests/database/: CMakeLists.txt  tagscache_utest.cpp  tagscache_utest.h
core/tests/dimg/: dimghistorygraph_utest.cpp
core/tests/dplugins/: loadandrun_generic_gui.cpp
core/tests/imgqsort/: CMakeLists.txt  detectblur_cli.cpp  detectblur_utest.cpp  detectblur_utest.h  detectcompression_cli.cpp  detectcompression_utest.cpp  detectcompression_utest.h  detectexposure_cli.cpp  detectexposure_utest.cpp  detectexposure_utest.h  detectgeneral_cli.cpp  detectgeneral_utest.cpp  detectgeneral_utest.h  detectnoise_cli.cpp  detectnoise_utest.cpp  detectnoise_utest.h  imgqsorttest.h  imgqsorttest_shared.cpp  imgqsorttest_shared.h
core/tests/mediaserver/: dmediaserver_cli.cpp
core/tests/metadataengine/: CMakeLists.txt  tagsreadwrite_utest.cpp
core/tests/miscs/: onlinedownload_cli.cpp
core/tests/mjpegstream/: CMakeLists.txt  mjpegstream_cli.cpp
core/tests/modeltest/: modeltest.cpp
core/tests/vkontakte/: albums_utest.cpp  albums_utest.h  frequentrequests_utest.cpp  frequentrequests_utest.h  photos_utest.cpp  photos_utest.h  userinfo_utest.cpp  userinfo_utest.h  vktestbase.cpp  vktestbase.h
core/utilities/focuspointmanagement/: CMakeLists.txt  focuspointgroup.cpp  focuspointgroup.h  focuspointgroup_p.cpp  focuspointgroup_p.h  focuspointitem.cpp  focuspointitem.h
shims/: CMakeLists.txt
shims/include/: dpluginloader.h  kconfiggroup.h
shims/src/: digikam_version.cpp
(+837 files in other folders)
